--- a/arxiv/2020_08_arxiv.html
+++ b/arxiv/2020_08_arxiv.html
@@ -227,7 +227,18 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06338">https://arxiv.org/abs/2008.06338</a></span> It’s anyon’s game: the race to quantum computation (Jainendra K. Jain)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06381">https://arxiv.org/abs/2008.06381</a></span> Non-Fermi liquid transport in the vicinity of nematic quantum critical point of FeSe1−xSx superconductor (Y. Matsuda)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06056">https://arxiv.org/abs/2008.06056</a></span> Quantum Mechanical Out-Of-Time-Ordered-Correlators for the Anharmonic (Quartic) Oscillator</p>
-<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06499">https://arxiv.org/abs/2008.06499</a></span> Anomaly and Cobordism Constraints Beyond Grand Unification: Energy Hierarchy (Juven Wang)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06499">https://arxiv.org/abs/2008.06499</a></span> Anomaly and Cobordism Constraints Beyond Grand Unification: Energy Hierarchy (Juven Wang)</p><br>
+<p class="p1">20200818</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07237">https://arxiv.org/abs/2008.07237</a></span> Higher-order non-Hermitian skin effect ***** (Masatoshi Sato, Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06513">https://arxiv.org/abs/2008.06513</a></span> Non-BCS-Type Enhancement of Superconductivity from Long-Range Photon Fluctuations **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06907">https://arxiv.org/abs/2008.06907</a></span> Strange metal behavior of the Hall angle in twisted bilayer graphene *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06509">https://arxiv.org/abs/2008.06509</a> </span>Evidence for deconfined U(1) gauge theory at the transition between toric code and double semion *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06528">https://arxiv.org/abs/2008.06528</a></span> Flat band topology of magic angle graphene on a transition metal dichalcogenide ***** (Michael P. Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06638">https://arxiv.org/abs/2008.06638</a></span> Intrinsically Gapless Topological Phases ***** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06879">https://arxiv.org/abs/2008.06879</a></span> Floquet second-order topological insulators in non-Hermitian systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07399">https://arxiv.org/abs/2008.07399</a></span> STM as a single Majorana detector of Kitaev’s chiral spin liquid ***** (Takashi Oka)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1904.03455">https://arxiv.org/abs/1904.03455</a></span> A 4d N = 1 Cardy Formula (Joonho Kim, Seok Kim, Jaewon Song)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.03852">https://arxiv.org/abs/2008.03852</a></span> Foliated Quantum Field Theory of Fracton Order ***** (Kevin Slagle)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
