--- a/arxiv/2020_08_arxiv.html
+++ b/arxiv/2020_08_arxiv.html
@@ -238,7 +238,102 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06879">https://arxiv.org/abs/2008.06879</a></span> Floquet second-order topological insulators in non-Hermitian systems **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07399">https://arxiv.org/abs/2008.07399</a></span> STM as a single Majorana detector of Kitaev’s chiral spin liquid ***** (Takashi Oka)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1904.03455">https://arxiv.org/abs/1904.03455</a></span> A 4d N = 1 Cardy Formula (Joonho Kim, Seok Kim, Jaewon Song)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.03852">https://arxiv.org/abs/2008.03852</a></span> Foliated Quantum Field Theory of Fracton Order ***** (Kevin Slagle)</p><br>
+<p class="p1">20200819</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08066">https://arxiv.org/abs/2008.08066</a></span> Generalized Spontaneous Symmetry Breaking</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07552">https://arxiv.org/abs/2008.07552</a></span> Spectroscopy of a Tunable Moiré System with a Correlated and Topological Flat Band *** (Jong Yeon Lee, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07596">https://arxiv.org/abs/2008.07596</a></span> Space-time dependent thermal conductivity in nonlocal thermal transport</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07974">https://arxiv.org/abs/2008.07974</a></span> Enhanced anomalous Nernst effect in disordered Dirac and Weyl materials *** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08019">https://arxiv.org/abs/2008.08019</a></span> Multi-critical topological transition at quantum criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07950">https://arxiv.org/abs/2008.07950</a></span> Topological reflected entropy in Chern-Simons theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.07814">https://arxiv.org/abs/2008.07814</a></span> Theory of Supercurrent in Superconductors ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200820</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08158">https://arxiv.org/abs/2008.08158</a></span> Scaling behavior in a multicritical one-dimensional topological insulator ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08319">https://arxiv.org/abs/2008.08319</a></span> Second Chern Number and Non-Abelian Berry Phase in Topological Superconducting Systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08231">https://arxiv.org/abs/2008.08231</a></span> Spin-Orbit-Induced Topological Flat Bands in Line and Split Graphs of Bipartite Lattices *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08434">https://arxiv.org/abs/2008.08434</a></span> Two relativistic Kondo effects from two HQETs ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08570">https://arxiv.org/abs/2008.08570</a></span> More quantum noise from wormholes **** (Douglas Stanford)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08489">https://arxiv.org/abs/2008.08489</a></span> MATHEMATICS OF MAGIC ANGLES IN A MODEL OF TWISTED BILAYER GRAPHENE *****</p>
+<p class="p2"><br></p>
+<p class="p1">20200821</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09025">https://arxiv.org/abs/2008.09025</a></span> Criticality of two-dimensional disordered Dirac fermions in the unitary class and universality of the integer quantum Hall transition (Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08681">https://arxiv.org/abs/2008.08681</a></span> Chiral magnetism: a geometric perspective</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09033">https://arxiv.org/abs/2008.09033</a></span> Non-Hermitian Second-Order Skin and Topological Modes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08583">https://arxiv.org/abs/2008.08583</a></span> Quantum aging and dynamical universality in the long-range O(N <span class="s2">→</span> ∞) model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08598">https://arxiv.org/abs/2008.08598</a></span> Topological Defects on the Lattice: Dualities and Degeneracies</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08683">https://arxiv.org/abs/2008.08683</a></span> <b>Geometric Quantum Thermodynamics **</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08616">https://arxiv.org/abs/2008.08616</a></span> Magnetoelastic coupling and effects of uniaxial strain in α-RuCl3 from first principles ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08873">https://arxiv.org/abs/2008.08873</a></span> Thermal fluctuations in superconducting phases with chiral d + id and s symmetry on a triangular lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08799">https://arxiv.org/abs/2008.08799</a></span> Emergent particles and gauge fields in quantum matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08601">https://arxiv.org/abs/2008.08601</a></span> Neural Networks and Quantum Field Theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10466">https://arxiv.org/abs/2003.10466</a></span> Exotic Symmetries, Duality, and Fractons in 2 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00015">https://arxiv.org/abs/2004.00015</a></span> Exotic U(1) Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.06115">https://arxiv.org/abs/2004.06115</a></span> Exotic ZN Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04904">https://arxiv.org/abs/2007.04904</a></span> More Exotic Field Theories in 3+1 Dimensions *** (Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2006.15933">https://arxiv.org/abs/2006.15933</a><span class="s3"> Phase transitions for φ43</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1807.06037">https://arxiv.org/abs/1807.06037</a></span> Homotopy Algebras in Higher Spin Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20200824</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09140">https://arxiv.org/abs/2008.09140</a></span> Quantum nematic in a colossal magnetoresistance material (W. Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09122">https://arxiv.org/abs/2008.09122</a></span> Designing three-dimensional flat bands *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09332">https://arxiv.org/abs/2008.09332</a></span> Symmetry resolved entanglement in symmetry protected topological phases ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200825</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1311.0733">https://arxiv.org/abs/1311.0733</a></span> Geometrical methods in mathematical physics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10253">https://arxiv.org/abs/2008.10253</a></span> Out-of-Time-Ordered Correlation in Anisotropic Dicke Model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10322">https://arxiv.org/abs/2008.10322</a></span> Real and imaginary-time evolution with compressed quantum circuits (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09761">https://arxiv.org/abs/2008.09761</a></span> Strain fields in twisted bilayer graphene **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10175">https://arxiv.org/abs/2008.10175</a></span> Two-dimensional Dirac Semimetals without Inversion Symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09802">https://arxiv.org/abs/2008.09802</a></span> β-As2Te3: Pressure-Induced 3D Dirac Semi-Metal</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.08799">https://arxiv.org/abs/2008.08799</a></span> Emergent particles and gauge fields in quantum matter ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10188">https://arxiv.org/abs/2008.10188</a></span> Detecting Time Crystal and Classifying Quantum Phases with Time Order **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09638">https://arxiv.org/abs/2008.09638</a></span> Holographic subdiffusion ***** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09963">https://arxiv.org/abs/2008.09963</a></span> Majorana-Hubbard model on the triangular lattice **** (Tarun Tummuru, Ian Affleck)</p>
+<p class="p2"><br></p>
+<p class="p1">20200826</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10611">https://arxiv.org/abs/2008.10611</a></span> How Dynamical Quantum Memories Forget *** (Jeongwan Haah, Matthew B. Hastings)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10830">https://arxiv.org/abs/2008.10830</a></span> Isospin Pomeranchuk effect and the entropy of collective excitations in twisted bilayer graphene *** (Erez Berg, Andrea F. Young)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11202">https://arxiv.org/abs/2008.11202</a></span> Topoelectric circuits: Theory and construction *** (Vladimir Juriˇci ́c, Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10738">https://arxiv.org/abs/2008.10738</a></span> Flat bands and Z2 topological phases in a non-Abelian kagome lattice ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10792">https://arxiv.org/abs/2008.10792</a></span> Anisotropy as a diagnostic test for distinct tensor network wavefunctions of integer and half-integer spin Kitaev quantum spin liquids *** (Hyun-Yong Lee, Yong Baek Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.03852">https://arxiv.org/abs/2008.03852</a></span> Foliated Quantum Field Theory of Fracton Order ***** (Kevin Slagle)</p>
+<p class="p2"><br></p>
+<p class="p1">20200827</p>
+<p class="p3"><a href="https://arxiv.org/abs/2008.11482">https://arxiv.org/abs/2008.11482</a><span class="s3"> Dissipation and energy gap</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11706">https://arxiv.org/abs/2008.11706</a></span> Flat bands in magic-angle vibrating plates ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11214">https://arxiv.org/abs/2008.11214</a></span> Interaction-induced metallicity in a two-dimensional disordered non-Fermi liquid ***** (S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11314">https://arxiv.org/abs/2008.11314</a></span> Generalized Passarino-Veltman reduction scheme in the absence of Lorentz invariance</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11630">https://arxiv.org/abs/2008.11630</a></span> Bloch Ferromagnetism of Composite Fermions (J. K. Jain)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11261">https://arxiv.org/abs/2008.11261</a></span> Matter-gravity coupling for fuzzy geometry and the Landau-Hall problem *** (V. P. Nair)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11266">https://arxiv.org/abs/2008.11266</a></span> The quasi-particle picture and its breakdown after local quenches: mutual information, negativity, and reflected entropy *** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11204">https://arxiv.org/abs/2008.11204</a></span> Symmetric pseudogap metal in a generalized t − J model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11206">https://arxiv.org/abs/2008.11206</a></span> From trivial to topological paramagnets: The case of Z2 and Z32 symmetries in two dimensions (Thomas Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11640">https://arxiv.org/abs/2008.11640</a></span> Magnon bands in twisted bilayer honeycomb quantum magnets ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11374">https://arxiv.org/abs/2008.11374</a></span> Berry curvature effects on quasiparticle dynamics in superconductors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11629">https://arxiv.org/abs/2008.11629</a></span> Spontaneous Non-Hermiticity in Nambu–Jona-Lasinio model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06395">https://arxiv.org/abs/2003.06395</a></span> Semiclassical Approximation meets Keldysh-Schwinger diagrammatic technique: Scalar φ4 ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00175">https://arxiv.org/abs/2006.00175</a></span> Non supersymmetric fermion boson symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11390">https://arxiv.org/abs/2008.11390</a></span> Parity operation for Majorana neutrinos ** (Kazuo Fujikawa)</p>
+<p class="p2"><br></p>
+<p class="p1">20200828</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12296">https://arxiv.org/abs/2008.12296</a></span> Flavour Hund’s Coupling, Correlated Chern Gaps, and Diffusivity in Moir ́e Flat Bands ** (Pablo Jarillo-Herrero)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11742">https://arxiv.org/abs/2008.11742</a></span> Quantum criticality in the 2d quasiperiodic Potts model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11955">https://arxiv.org/abs/2008.11955</a></span> Non-unitary dynamics of Sachdev-Ye-Kitaev chain ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12274">https://arxiv.org/abs/2008.12274</a></span> Complexity growth of operators in the SYK model and in JT gravity *** (Shao-Kai Jian, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.05780">https://arxiv.org/abs/2004.05780</a></span> Fermi Condensation induced by Weyl Anomaly</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12975">https://arxiv.org/abs/2005.12975</a></span> Weyl Anomaly induced Fermi Condensation and Holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11725">https://arxiv.org/abs/2008.11725</a></span> Second sound and non-equilibrium effective field theory **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11794">https://arxiv.org/abs/2008.11794</a></span> Domain wall topological entanglement entropy (Isaac H. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.11793">https://arxiv.org/abs/2008.11793</a></span> Entanglement bootstrap approach for gapped domain walls (Isaac H. Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20200831</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12307">https://arxiv.org/abs/2008.12307</a></span> Destabilization of the U(1) Dirac spin liquid phase on the triangular lattice by quenched disorder **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12590">https://arxiv.org/abs/2008.12590</a></span> Square-root topological semimetals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12532">https://arxiv.org/abs/2008.12532</a></span> Spin-fluctuation-induced pairing in twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12324">https://arxiv.org/abs/2008.12324</a></span> Non-Fermi Liquid Behaviour in the Three Dimensional Hubbard Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1903.03622">https://arxiv.org/abs/1903.03622</a></span> As Scales Become Separated: Lectures on Effective Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12541">https://arxiv.org/abs/2008.12541</a></span> Superinsulators, a toy realization of QCD in condensed matter **</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
