--- a/arxiv/2020_09_arxiv.html
+++ b/arxiv/2020_09_arxiv.html
@@ -126,6 +126,43 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20200901</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.13663">https://arxiv.org/pdf/2008.13663</a></span> Random-mass disorder in the critical Gross-Neveu-Yukawa models *** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.13488">https://arxiv.org/pdf/2008.13488</a></span> Wiedemann-Franz law in scattering theory revisited</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.13431">https://arxiv.org/pdf/2008.13431</a></span> Three-dimensional quantum Hall effect and magnetothermoelectric properties in Weyl semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.13752">https://arxiv.org/pdf/2008.13752</a></span> Correlated Insulators in Twisted Bilayer Graphene ** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.12788">https://arxiv.org/pdf/2008.12788</a></span> Sign structure of thermal Hall conductivity for in-plane-field polarized Kitaev magnets ** (Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.13119">https://arxiv.org/pdf/2008.13119</a></span> Duality study of chiral Heisenberg Gross-Neveu model in 1+1 dimensions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1710.04385">https://arxiv.org/pdf/1710.04385</a></span> Characterization of degenerate supersymmetric ground states of the Nicolai supersymmetric fermion lattice model by symmetry breakdown (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1912.03276">https://arxiv.org/pdf/1912.03276</a></span> SYK wormhole formation in real time *** (Juan Maldacena)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.02406">https://arxiv.org/pdf/2008.02406</a></span> SU(N)1 Chern-Simons theory, the Clifford group, and Entropy Cone</p>
+<p class="p2"><br></p>
+<p class="p1">20200902</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00486">https://arxiv.org/pdf/2009.00486</a></span> Localized Dirac eigenmodes, chiral symmetry breaking, and Goldstone’s theorem</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00011">https://arxiv.org/pdf/2009.00011</a></span> Non-Abelian Fermionization and the Landscape of Quantum Hall Phases ** (Eduardo Fradkin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00546">https://arxiv.org/pdf/2009.00546</a></span> Entanglement, non-Hermiticity and duality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00355">https://arxiv.org/pdf/2009.00355</a></span> An introduction to kinks in φ4-theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00070">https://arxiv.org/pdf/2009.00070</a></span> Vestigial Anyon Condensation on Kagome Quantum Spin Liquids (Qi Yang,<span class="Apple-converted-space">  </span>Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00033">https://arxiv.org/pdf/2009.00033</a></span> Revisiting Wess-Zumino-Witten terms ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00381">https://arxiv.org/pdf/2009.00381</a></span> The superconducting dome for holographic doped Mott insulator with hyperscaling violation (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00023">https://arxiv.org/pdf/2009.00023</a> </span>Physics of Symmetry Protected Topological phases involving Higher Symmetries and their Applications ***** (Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00022">https://arxiv.org/pdf/2009.00022</a></span> Topological Quantum Many-Body Scars in Quantum Dimer Models on the Kagome Lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00507">https://arxiv.org/pdf/2009.00507</a></span> Non-local dxy nematicity and the missing electron pocket in FeSe<br>
+</p>
+<p class="p1">20200903</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00860">https://arxiv.org/pdf/2009.00860</a></span> Heterobilayer moir ́e magnets: moir ́e skyrmions, commensurate-incommensurate transition and more ** (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.00850">https://arxiv.org/pdf/2009.00850</a></span> Floquet Engineering of Multifold Fermions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01078">https://arxiv.org/pdf/2009.01078</a></span> From Ising model to Kitaev Chain - An introduction to topological phase transitions *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01007">https://arxiv.org/pdf/2009.01007</a></span> Bose-Einstein condensate-mediated BCS-like superconductivity in graphene **</p>
+<p class="p2"><br></p>
+<p class="p1">20200904</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01250">https://arxiv.org/pdf/2009.01250</a></span> Boundary Topological Superconductors **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01836">https://arxiv.org/pdf/2009.01836</a></span> Entropic evidence for a Pomeranchuk effect in magic angle graphene *** (Yuval Oreg, Ady Stern, Erez Berg, P. Jarillo- Herrero)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01237">https://arxiv.org/pdf/2009.01237</a></span> Topological and nematic superconductivity mediated by ferro-SU(4) fluctuations in twisted bilayer graphene *** (Yuxuan Wang,1 Jian Kang,2 and Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01313">https://arxiv.org/pdf/2009.01313</a></span> A three-dimensional conformal lattice gauge theory without fine-tuning</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01271">https://arxiv.org/pdf/2009.01271</a></span> Unbounded Hydrodynamics in Nodal-Line Semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2006.16996">https://arxiv.org/pdf/2006.16996</a></span> Anomaly and Cobordism Constraints Beyond Standard Model: Topological Force *** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.06499">https://arxiv.org/pdf/2008.06499</a></span> Anomaly and Cobordism Constraints Beyond Grand Unification: Energy Hierarchy *** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01645">https://arxiv.org/pdf/2009.01645</a></span> A Personal History of the Hastings-Michalakis Proof of Hall Conductance Quantization ** (Matthew B. Hastings)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
