--- a/arxiv/2020_09_arxiv.html
+++ b/arxiv/2020_09_arxiv.html
@@ -155,14 +155,63 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01007">https://arxiv.org/pdf/2009.01007</a></span> Bose-Einstein condensate-mediated BCS-like superconductivity in graphene **</p>
 <p class="p2"><br></p>
 <p class="p1">20200904</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01250">https://arxiv.org/pdf/2009.01250</a></span> Boundary Topological Superconductors **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01836">https://arxiv.org/pdf/2009.01836</a></span> Entropic evidence for a Pomeranchuk effect in magic angle graphene *** (Yuval Oreg, Ady Stern, Erez Berg, P. Jarillo- Herrero)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01237">https://arxiv.org/pdf/2009.01237</a></span> Topological and nematic superconductivity mediated by ferro-SU(4) fluctuations in twisted bilayer graphene *** (Yuxuan Wang,1 Jian Kang,2 and Rafael M. Fernandes)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01313">https://arxiv.org/pdf/2009.01313</a></span> A three-dimensional conformal lattice gauge theory without fine-tuning</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01271">https://arxiv.org/pdf/2009.01271</a></span> Unbounded Hydrodynamics in Nodal-Line Semimetals</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2006.16996">https://arxiv.org/pdf/2006.16996</a></span> Anomaly and Cobordism Constraints Beyond Standard Model: Topological Force *** (Juven Wang)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2008.06499">https://arxiv.org/pdf/2008.06499</a></span> Anomaly and Cobordism Constraints Beyond Grand Unification: Energy Hierarchy *** (Juven Wang)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.01645">https://arxiv.org/pdf/2009.01645</a></span> A Personal History of the Hastings-Michalakis Proof of Hall Conductance Quantization ** (Matthew B. Hastings)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.01250">https://arxiv.org/abs/2009.01250</a></span> Boundary Topological Superconductors **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.01836">https://arxiv.org/abs/2009.01836</a></span> Entropic evidence for a Pomeranchuk effect in magic angle graphene *** (Yuval Oreg, Ady Stern, Erez Berg, P. Jarillo- Herrero)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.01237">https://arxiv.org/abs/2009.01237</a></span> Topological and nematic superconductivity mediated by ferro-SU(4) fluctuations in twisted bilayer graphene *** (Yuxuan Wang, Jian Kang, Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.01313">https://arxiv.org/abs/2009.01313</a></span> A three-dimensional conformal lattice gauge theory without fine-tuning</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.01271">https://arxiv.org/abs/2009.01271</a></span> Unbounded Hydrodynamics in Nodal-Line Semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.16996">https://arxiv.org/abs/2006.16996</a></span> Anomaly and Cobordism Constraints Beyond Standard Model: Topological Force *** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.06499">https://arxiv.org/abs/2008.06499</a></span> Anomaly and Cobordism Constraints Beyond Grand Unification: Energy Hierarchy *** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.01645">https://arxiv.org/abs/2009.01645</a></span> A Personal History of the Hastings-Michalakis Proof of Hall Conductance Quantization ** (Matthew B. Hastings)</p>
+<p class="p2"><br></p>
+<p class="p1">20200907</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.02268">https://arxiv.org/abs/2009.02268</a></span> The external tensor product of topological phases of free fermions: “SSH times SSH equals Chern insulator” **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.01975">https://arxiv.org/abs/2009.01975</a></span> Proposal for methods to measure the octupole susceptibility ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.02301">https://arxiv.org/abs/2009.02301</a></span> Effects of Lorentz violation in superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.02162">https://arxiv.org/abs/2009.02162</a></span> Teaching gauge theory to first year students</p>
+<p class="p2"><br></p>
+<p class="p1">20200908</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.02336">https://arxiv.org/abs/2009.02336</a></span> Non-Fermi Liquids in Conducting 2D Networks ***** (Jongjun M. Lee, Masaki Oshikawa, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.02337">https://arxiv.org/abs/2009.02337</a></span> Geometric entanglement in integer quantum Hall states (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.02425">https://arxiv.org/abs/2009.02425</a></span> Chiral topological superconductivity in Josephson junction (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05915">https://arxiv.org/abs/2007.05915</a></span> Discrete Theta Angles, Symmetries and Anomalies</p>
+<p class="p2"><br></p>
+<p class="p1">20200909</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03580">https://arxiv.org/abs/2009.03580</a></span> Ferromagnetism in d-dimensional SU(n) Hubbard models with nearly flat bands ** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03338">https://arxiv.org/abs/2009.03338</a></span> Integrability and scattering of the boson field theory on a lattice **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03541">https://arxiv.org/abs/2009.03541</a></span> Unconventional scaling at non-Hermitian critical points ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03332">https://arxiv.org/abs/2009.03332</a></span> Magnetic vortex liquid and anomalous thermal Hall conductivity in frustrated magnets with bond-dependent interactions *** (Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03596">https://arxiv.org/abs/2009.03596</a></span> Current response of nonequilibrium steady states in Landau-Zener problem: Nonequilibrium Green’s function approach ** (Naoto Nagaosa, Takahiro Morimoto)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03602">https://arxiv.org/abs/2009.03602</a></span> Quantum phases driven by strong correlations *** (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03752">https://arxiv.org/abs/2009.03752</a></span> Topological Gaps in Quasi-Periodic Spin Chains: A Numerical and K-Theoretic Analysis</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03848">https://arxiv.org/abs/2009.03848</a></span> Topological metals and finite-momentum superconductors ***** (Noah F. Q. Yuan, Liang Fu)<br>
+<a href="https://arxiv.org/abs/2009.02958"><span class="s1">https://arxiv.org/abs/2009.02958</span></a> Exact generating function of a zero-dimensional supersymmetric non-linear sigma model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03570">https://arxiv.org/abs/2009.03570</a></span> THE INDEX THEOREM OF LATTICE WILSON–DIRAC OPERATORS VIA HIGHER INDEX THEORY</p>
+<p class="p2"><br></p>
+<p class="p1">20200910</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04457">https://arxiv.org/abs/2009.04457</a></span> Studying many-body localization in exchange-coupled electron spin qubits using spin-spin correlations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04235">https://arxiv.org/abs/2009.04235</a></span> Closure of the entanglement gap at quantum criticality: The case of the Quantum Spherical Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04129">https://arxiv.org/abs/2009.04129</a></span> Density matrix renormalization group boosted by Gutzwiller projected wave functions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04111">https://arxiv.org/abs/2009.04111</a></span> Topological quantum phase transitions and criticality in long-range Kitaev chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03924">https://arxiv.org/abs/2009.03924</a></span> Variational wavefunctions for Sachdev-Ye-Kitaev models ** (Thomas Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04440">https://arxiv.org/abs/2009.04440</a></span> Microscopic evolution of doped Mott insulators from polaronic metal to Fermi liquid</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03990">https://arxiv.org/abs/2009.03990</a></span> A tale of three diagonalizations ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.08496">https://arxiv.org/abs/1912.08496</a></span> LECTURE NOTES ON GENERALISED HYDRODYNAMICS</p>
+<p class="p2"><br></p>
+<p class="p1">20200911</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04845">https://arxiv.org/abs/2009.04845</a></span> Fractional Corner Charge of Sodium Chloride ***** (Haruki Watanabe1, <span class="s2">∗</span> and Hoi Chun Po)<br>
+<a href="https://arxiv.org/abs/2009.04486"><span class="s1">https://arxiv.org/abs/2009.04486</span></a> Tenfold Topology of Crystals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04654">https://arxiv.org/abs/2009.04654</a></span> Three-dimensional time-reversal invariant topological superconductivity in doped chiral topological semimetals *** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05043">https://arxiv.org/abs/2009.05043</a></span> Berry curvature dipole in topological Weyl semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04922">https://arxiv.org/abs/2009.04922</a></span> Superconductivity in the three-band model of cuprates: nodal direction characteristics and influence of intersite interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05037">https://arxiv.org/abs/2009.05037</a></span> Gapped Chiral Fermions *** (Gapped Chiral Fermions)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04475">https://arxiv.org/abs/2009.04475</a></span> Magnetic Anisotropy in Spin-3/2 with Heavy Ligand in Honeycomb Mott Insulators: Application to CrI3 ** (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04763">https://arxiv.org/abs/2009.04763</a></span> The Operator Algebra at the Gaussian Fixed-Point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05001">https://arxiv.org/abs/2009.05001</a></span> The Beginning of the Nuclear Age (M. Shifman)</p>
+<p class="p2"><br></p>
+<p class="p1">20200914</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05055">https://arxiv.org/abs/2009.05055</a></span> Emergent chiral symmetry in a three-dimensional interacting Dirac liquid *** (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05119">https://arxiv.org/abs/2009.05119</a></span> Boundary criticality of the O(N) model in d = 3 critically revisited ***** (Max A. Metlitski)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
